StormIDE/parser/StormParser.js
// Generated from Storm.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var StormListener = require('./StormListener').StormListener;
var grammarFileName = "Storm.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'{'", "'}'", null, null, null, null, "'=>'", 
                     "'to hit'", "'hit'", "'action'", "'reach'", "'range'", 
                     "'d'", "'/'", "'actions'", "'features'" ];

var symbolicNames = [ null, "OPEN", "CLOSE", "MODIFIER_OP", "STAT_ID", "STAT", 
                      "DAMAGE_TYPE", "ARROW", "TO_HIT", "HIT", "ACTION", 
                      "REACH", "RANGE", "D", "SLASH", "ACTIONS", "FEATURES", 
                      "WORD", "NUMBER", "NEWLINE", "WS", "ANY" ];

var ruleNames =  [ "block", "block_name", "traits", "stat", "ability_block", 
                   "ability", "action_zone", "action_block", "action_block_name", 
                   "action_component", "feature_zone", "feature_block", 
                   "feature_name", "to_hit", "reach", "range", "hit", "dice", 
                   "modifier", "description" ];

function StormParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

StormParser.prototype = Object.create(antlr4.Parser.prototype);
StormParser.prototype.constructor = StormParser;

Object.defineProperty(StormParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

StormParser.EOF = antlr4.Token.EOF;
StormParser.OPEN = 1;
StormParser.CLOSE = 2;
StormParser.MODIFIER_OP = 3;
StormParser.STAT_ID = 4;
StormParser.STAT = 5;
StormParser.DAMAGE_TYPE = 6;
StormParser.ARROW = 7;
StormParser.TO_HIT = 8;
StormParser.HIT = 9;
StormParser.ACTION = 10;
StormParser.REACH = 11;
StormParser.RANGE = 12;
StormParser.D = 13;
StormParser.SLASH = 14;
StormParser.ACTIONS = 15;
StormParser.FEATURES = 16;
StormParser.WORD = 17;
StormParser.NUMBER = 18;
StormParser.NEWLINE = 19;
StormParser.WS = 20;
StormParser.ANY = 21;

StormParser.RULE_block = 0;
StormParser.RULE_block_name = 1;
StormParser.RULE_traits = 2;
StormParser.RULE_stat = 3;
StormParser.RULE_ability_block = 4;
StormParser.RULE_ability = 5;
StormParser.RULE_action_zone = 6;
StormParser.RULE_action_block = 7;
StormParser.RULE_action_block_name = 8;
StormParser.RULE_action_component = 9;
StormParser.RULE_feature_zone = 10;
StormParser.RULE_feature_block = 11;
StormParser.RULE_feature_name = 12;
StormParser.RULE_to_hit = 13;
StormParser.RULE_reach = 14;
StormParser.RULE_range = 15;
StormParser.RULE_hit = 16;
StormParser.RULE_dice = 17;
StormParser.RULE_modifier = 18;
StormParser.RULE_description = 19;

function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StormParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.block_name = function() {
    return this.getTypedRuleContext(Block_nameContext,0);
};

BlockContext.prototype.traits = function() {
    return this.getTypedRuleContext(TraitsContext,0);
};

BlockContext.prototype.EOF = function() {
    return this.getToken(StormParser.EOF, 0);
};

BlockContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(StormParser.NEWLINE);
    } else {
        return this.getToken(StormParser.NEWLINE, i);
    }
};


BlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.enterBlock(this);
	}
};

BlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.exitBlock(this);
	}
};




StormParser.BlockContext = BlockContext;

StormParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, StormParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 40;
        this.block_name();
        this.state = 42; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 41;
            this.match(StormParser.NEWLINE);
            this.state = 44; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===StormParser.NEWLINE);
        this.state = 46;
        this.traits();
        this.state = 50;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===StormParser.NEWLINE) {
            this.state = 47;
            this.match(StormParser.NEWLINE);
            this.state = 52;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 53;
        this.match(StormParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Block_nameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StormParser.RULE_block_name;
    return this;
}

Block_nameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Block_nameContext.prototype.constructor = Block_nameContext;

Block_nameContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(StormParser.NEWLINE);
    } else {
        return this.getToken(StormParser.NEWLINE, i);
    }
};


Block_nameContext.prototype.enterRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.enterBlock_name(this);
	}
};

Block_nameContext.prototype.exitRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.exitBlock_name(this);
	}
};




StormParser.Block_nameContext = Block_nameContext;

StormParser.prototype.block_name = function() {

    var localctx = new Block_nameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, StormParser.RULE_block_name);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 56; 
        this._errHandler.sync(this);
        var _alt = 1+1;
        do {
        	switch (_alt) {
        	case 1+1:
        		this.state = 55;
        		this.matchWildcard();
        		break;
        	default:
        		throw new antlr4.error.NoViableAltException(this);
        	}
        	this.state = 58; 
        	this._errHandler.sync(this);
        	_alt = this._interp.adaptivePredict(this._input,2, this._ctx);
        } while ( _alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
        this.state = 63;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1+1) {
                this.state = 60;
                _la = this._input.LA(1);
                if(_la<=0 || _la===StormParser.NEWLINE) {
                this._errHandler.recoverInline(this);
                }
                else {
                	this._errHandler.reportMatch(this);
                    this.consume();
                } 
            }
            this.state = 65;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TraitsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StormParser.RULE_traits;
    return this;
}

TraitsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TraitsContext.prototype.constructor = TraitsContext;

TraitsContext.prototype.ability_block = function() {
    return this.getTypedRuleContext(Ability_blockContext,0);
};

TraitsContext.prototype.stat = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatContext);
    } else {
        return this.getTypedRuleContext(StatContext,i);
    }
};

TraitsContext.prototype.action_zone = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Action_zoneContext);
    } else {
        return this.getTypedRuleContext(Action_zoneContext,i);
    }
};

TraitsContext.prototype.feature_zone = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Feature_zoneContext);
    } else {
        return this.getTypedRuleContext(Feature_zoneContext,i);
    }
};

TraitsContext.prototype.enterRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.enterTraits(this);
	}
};

TraitsContext.prototype.exitRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.exitTraits(this);
	}
};




StormParser.TraitsContext = TraitsContext;

StormParser.prototype.traits = function() {

    var localctx = new TraitsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, StormParser.RULE_traits);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 69;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===StormParser.STAT) {
            this.state = 66;
            this.stat();
            this.state = 71;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 72;
        this.ability_block();
        this.state = 76;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===StormParser.ACTIONS) {
            this.state = 73;
            this.action_zone();
            this.state = 78;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 82;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===StormParser.FEATURES) {
            this.state = 79;
            this.feature_zone();
            this.state = 84;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StormParser.RULE_stat;
    return this;
}

StatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatContext.prototype.constructor = StatContext;

StatContext.prototype.STAT = function() {
    return this.getToken(StormParser.STAT, 0);
};

StatContext.prototype.NUMBER = function() {
    return this.getToken(StormParser.NUMBER, 0);
};

StatContext.prototype.dice = function() {
    return this.getTypedRuleContext(DiceContext,0);
};

StatContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(StormParser.WS);
    } else {
        return this.getToken(StormParser.WS, i);
    }
};


StatContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(StormParser.NEWLINE);
    } else {
        return this.getToken(StormParser.NEWLINE, i);
    }
};


StatContext.prototype.enterRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.enterStat(this);
	}
};

StatContext.prototype.exitRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.exitStat(this);
	}
};




StormParser.StatContext = StatContext;

StormParser.prototype.stat = function() {

    var localctx = new StatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, StormParser.RULE_stat);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 85;
        this.match(StormParser.STAT);
        this.state = 87; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 86;
            this.match(StormParser.WS);
            this.state = 89; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===StormParser.WS);
        this.state = 93;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
        switch(la_) {
        case 1:
            this.state = 91;
            this.match(StormParser.NUMBER);
            break;

        case 2:
            this.state = 92;
            this.dice();
            break;

        }
        this.state = 96; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 95;
            this.match(StormParser.NEWLINE);
            this.state = 98; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===StormParser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Ability_blockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StormParser.RULE_ability_block;
    return this;
}

Ability_blockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Ability_blockContext.prototype.constructor = Ability_blockContext;

Ability_blockContext.prototype.ability = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AbilityContext);
    } else {
        return this.getTypedRuleContext(AbilityContext,i);
    }
};

Ability_blockContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(StormParser.NEWLINE);
    } else {
        return this.getToken(StormParser.NEWLINE, i);
    }
};


Ability_blockContext.prototype.enterRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.enterAbility_block(this);
	}
};

Ability_blockContext.prototype.exitRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.exitAbility_block(this);
	}
};




StormParser.Ability_blockContext = Ability_blockContext;

StormParser.prototype.ability_block = function() {

    var localctx = new Ability_blockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, StormParser.RULE_ability_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 103; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 100;
            this.ability();
            this.state = 101;
            this.match(StormParser.NEWLINE);
            this.state = 105; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===StormParser.STAT_ID);
        this.state = 110;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,11,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 107;
                this.match(StormParser.NEWLINE); 
            }
            this.state = 112;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,11,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AbilityContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StormParser.RULE_ability;
    return this;
}

AbilityContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AbilityContext.prototype.constructor = AbilityContext;

AbilityContext.prototype.STAT_ID = function() {
    return this.getToken(StormParser.STAT_ID, 0);
};

AbilityContext.prototype.WS = function() {
    return this.getToken(StormParser.WS, 0);
};

AbilityContext.prototype.NUMBER = function() {
    return this.getToken(StormParser.NUMBER, 0);
};

AbilityContext.prototype.enterRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.enterAbility(this);
	}
};

AbilityContext.prototype.exitRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.exitAbility(this);
	}
};




StormParser.AbilityContext = AbilityContext;

StormParser.prototype.ability = function() {

    var localctx = new AbilityContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, StormParser.RULE_ability);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 113;
        this.match(StormParser.STAT_ID);
        this.state = 114;
        this.match(StormParser.WS);
        this.state = 115;
        this.match(StormParser.NUMBER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Action_zoneContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StormParser.RULE_action_zone;
    return this;
}

Action_zoneContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Action_zoneContext.prototype.constructor = Action_zoneContext;

Action_zoneContext.prototype.ACTIONS = function() {
    return this.getToken(StormParser.ACTIONS, 0);
};

Action_zoneContext.prototype.OPEN = function() {
    return this.getToken(StormParser.OPEN, 0);
};

Action_zoneContext.prototype.CLOSE = function() {
    return this.getToken(StormParser.CLOSE, 0);
};

Action_zoneContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(StormParser.WS);
    } else {
        return this.getToken(StormParser.WS, i);
    }
};


Action_zoneContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(StormParser.NEWLINE);
    } else {
        return this.getToken(StormParser.NEWLINE, i);
    }
};


Action_zoneContext.prototype.action_block = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Action_blockContext);
    } else {
        return this.getTypedRuleContext(Action_blockContext,i);
    }
};

Action_zoneContext.prototype.enterRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.enterAction_zone(this);
	}
};

Action_zoneContext.prototype.exitRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.exitAction_zone(this);
	}
};




StormParser.Action_zoneContext = Action_zoneContext;

StormParser.prototype.action_zone = function() {

    var localctx = new Action_zoneContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, StormParser.RULE_action_zone);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 117;
        this.match(StormParser.ACTIONS);
        this.state = 119; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 118;
            this.match(StormParser.WS);
            this.state = 121; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===StormParser.WS);
        this.state = 123;
        this.match(StormParser.OPEN);
        this.state = 127;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 124;
                this.match(StormParser.NEWLINE); 
            }
            this.state = 129;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
        }

        this.state = 133;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,14,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 130;
                this.action_block(); 
            }
            this.state = 135;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,14,this._ctx);
        }

        this.state = 139;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===StormParser.NEWLINE) {
            this.state = 136;
            this.match(StormParser.NEWLINE);
            this.state = 141;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 142;
        this.match(StormParser.CLOSE);
        this.state = 146;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,16,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 143;
                this.match(StormParser.NEWLINE); 
            }
            this.state = 148;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,16,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Action_blockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StormParser.RULE_action_block;
    return this;
}

Action_blockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Action_blockContext.prototype.constructor = Action_blockContext;

Action_blockContext.prototype.action_block_name = function() {
    return this.getTypedRuleContext(Action_block_nameContext,0);
};

Action_blockContext.prototype.ARROW = function() {
    return this.getToken(StormParser.ARROW, 0);
};

Action_blockContext.prototype.action_component = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Action_componentContext);
    } else {
        return this.getTypedRuleContext(Action_componentContext,i);
    }
};

Action_blockContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(StormParser.NEWLINE);
    } else {
        return this.getToken(StormParser.NEWLINE, i);
    }
};


Action_blockContext.prototype.description = function() {
    return this.getTypedRuleContext(DescriptionContext,0);
};

Action_blockContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(StormParser.WS);
    } else {
        return this.getToken(StormParser.WS, i);
    }
};


Action_blockContext.prototype.enterRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.enterAction_block(this);
	}
};

Action_blockContext.prototype.exitRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.exitAction_block(this);
	}
};




StormParser.Action_blockContext = Action_blockContext;

StormParser.prototype.action_block = function() {

    var localctx = new Action_blockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, StormParser.RULE_action_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 149;
        this.action_block_name();
        this.state = 151; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 150;
            _la = this._input.LA(1);
            if(!(_la===StormParser.NEWLINE || _la===StormParser.WS)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 153; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===StormParser.NEWLINE || _la===StormParser.WS);
        this.state = 155;
        this.match(StormParser.ARROW);
        this.state = 157; 
        this._errHandler.sync(this);
        var _alt = 1;
        do {
        	switch (_alt) {
        	case 1:
        		this.state = 156;
        		_la = this._input.LA(1);
        		if(!(_la===StormParser.NEWLINE || _la===StormParser.WS)) {
        		this._errHandler.recoverInline(this);
        		}
        		else {
        			this._errHandler.reportMatch(this);
        		    this.consume();
        		}
        		break;
        	default:
        		throw new antlr4.error.NoViableAltException(this);
        	}
        	this.state = 159; 
        	this._errHandler.sync(this);
        	_alt = this._interp.adaptivePredict(this._input,18, this._ctx);
        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
        this.state = 164;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,19,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 161;
                this.action_component(); 
            }
            this.state = 166;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,19,this._ctx);
        }

        this.state = 168;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,20,this._ctx);
        if(la_===1) {
            this.state = 167;
            this.match(StormParser.NEWLINE);

        }
        this.state = 171;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,21,this._ctx);
        if(la_===1) {
            this.state = 170;
            this.description();

        }
        this.state = 176;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,22,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 173;
                this.match(StormParser.NEWLINE); 
            }
            this.state = 178;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,22,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Action_block_nameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StormParser.RULE_action_block_name;
    return this;
}

Action_block_nameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Action_block_nameContext.prototype.constructor = Action_block_nameContext;

Action_block_nameContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(StormParser.NEWLINE);
    } else {
        return this.getToken(StormParser.NEWLINE, i);
    }
};


Action_block_nameContext.prototype.OPEN = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(StormParser.OPEN);
    } else {
        return this.getToken(StormParser.OPEN, i);
    }
};


Action_block_nameContext.prototype.CLOSE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(StormParser.CLOSE);
    } else {
        return this.getToken(StormParser.CLOSE, i);
    }
};


Action_block_nameContext.prototype.enterRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.enterAction_block_name(this);
	}
};

Action_block_nameContext.prototype.exitRule = function(listener) {
    if(listener instanceof StormListener ) {
        listener.exitAction_block_name(this);
	}
};




StormParser.Action_block_nameContext = Action_block_nameContext;

StormParser.prototype.action_block_name = function() {
